--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 	<!-- Owl Carousel -->
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 
@@ -102,7 +103,10 @@
 							<div class="fh5co-cover-intro">
 								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Messages from a Blind Spot</h1>
 								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">18 days, an estimated 50 civilians dead, and thousands injured.</h2>
-								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="http://freehtml5.co/" class="btn btn-primary btn-outline btn-lg">Know about it</a></p>
+								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".9s">
+									Since the July 8 th of 2016, the Indian state has unleashed indiscriminate force on the people of Jammu Kashmir. To crackdown on the people who were mourning the death of an armed fighter, the state has held the Kashmir region under a suffocating siege. To crush the protesters, the state has resorted to brutal violence that has left 50 civilians dead and thousands injured.
+								</p>
+								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="http://freehtml5.co/" class="btn btn-primary btn-outline btn-lg">Read about it</a></p>
 							</div>
 						</div>
 					</div>
@@ -120,67 +124,97 @@
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Where it began</h2>
 						<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">
 							<p>
-								Following the killing of a rebel leader on 8 July 2016, and consequent mourning by the people, the Indian State has resorted to unbridled violence and the people of Jammu and Kashmir are under siege. A particularly horrific feature of this violence has been the use of pellet shotguns. Pellet shotguns, wrongly described by the State as “non-lethal”, have been used against the people of Jammu and Kashmir since 2010 and are lethal and their use inherently indiscriminate, incapable of distinction or proportionality of force. Thus far an estimated 2000 have met with grievous injuries including an estimated 70 civilians partially or totally blinded by pellet shotgun injuries. Few civilians are reported to have died from the use of these lethal weapons.
+								Among the thousands of casualties lies a horrific usage of pellet shotguns. In the name of non lethal weapons, the state’s indiscriminate use of pellet shot guns has resulted in an estimated 70 civilians being partially or totally blinded. The pellet shotguns have been first put to use in 2010, have been banned internationally by various organisations and governments. They are incapable of distinction or proportionality of force during ‘crowd control’ situations. Jammu Kashmir is reeling under a state agression that aims to control the population, crackdown on collective protests, restrict all civilian rights and break the will of the people who demand freedom and self determination.
 							</p>
 							<p>
-								This is Jammu and Kashmir today and the violence of the Indian armed forces against the people grows daily as the Indian State seeks to control the population, curb collective protests, restrict all civilian rights and extinguish a peoples’ cry for freedom and demand for self-determination. The present violence is a continuation of decades of State violence, aggression and denial of peoples’ rights. Thus far, Jammu and Kashmir, a military occupation under the control of an approximate 7, 00,000 Indian armed forces personnel, has been subject to an estimated 70,000 killings, 8000+ enforced disappearances and numerous cases of torture and sexual violence. Legal impunity for the perpetrators of human rights violations has sent a message to the people: that any demands for political and civil rights will be met with force at all costs. The Indian State has violated its own laws in addition to international law, particularly the Geneva Conventions. The violence coupled with no immediate sight of a solution has led to growing concern in Jammu and Kashmir, particularly on the limited role of the international community.
+								The present violence is a continuation of state agression since decades, whereby people’s demand for right of self determination has been curbed under a brutal crackdown. Thus far, militarily occupied Jammu Kashmir with over 700,000 Indian armed forces personnel have been complicit of killing 70, 000 people, over 8000 enforced disappearances and countless cases of torture and sexual violence.
 							</p>
 							<p>
-								Today, JKCCS, on behalf of the resilient and courageous people of Jammu and Kashmir launches - Messages from a Blind Spot - a campaign appealing the international community to bear witness to the suffering caused by the violence of the State in a region where people seek to exercise their basic right to freedom. Stand by the people of Jammu and Kashmir and share the campaign material widely as posters and pamphlets, as public messages in newspapers, and as direct appeals to political representatives of your countries and international organizations [including to CP@ohchr.org].
+								In this occupied territory, the Indian state has given legal impunity to its armed forces as to exonerate potential war crimes. The Indian state not only stands in violation of its own laws but international laws and in particular the Geneva conventions.
+							</p>
+							<p>
+								Today, JKCCS, on behalf of the resilient and courageous people of Jammu and Kashmir launches - Messages from a Blind Spot - a campaign to remind the international community to the suffering caused by the aggression of the State in a region where people demand their basic right to freedom.Stand for the people of Jammu and Kashmir.
 							</p>
 						</div>
-						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#" class="btn btn-success btn-lg">Read More</a></p>
+						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#" class="btn btn-success btn-lg">Know More</a></p>
 					</div>
 				</div>
 			</div>
-			<div class="fh5co-projects">
-				<ul>
-					<li class="wow fadeInUp" style="background-image: url(images/full_4.jpg);" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
-						<a href="#">
-							<div class="fh5co-overlay"></div>
-							<div class="container">
-								<div class="fh5co-text">
-									<div class="fh5co-text-inner">
-										<div class="row">
-											<div class="col-md-6"><h3>Repressive Regime</h3></div>
-											<div class="col-md-6"><p>Content for Poster 1</p></div>
-										</div>
-									</div>
+
+
+		<div class="fh5co-pricing-style-2">
+			<div class="container">
+				<div class="row">
+					<div class="row p-b">
+						<div class="col-md-6 col-md-offset-3 text-center">
+							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Campaign</h2>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s"> </p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="container">
+						<div class="pricing">
+	            <div class="pricing-item wow fadeInUp col-md-4" data-wow-duration="1s" data-wow-delay="1.1s">
+    						<div class="hovereffect">
+        					<img class="img-responsive" src="http://placehold.it/350x500" alt="">
+            			<div class="overlay">
+	                	<h2>Share</h2>
+	                	<p class="icon-links">
+	                    <a href="#">
+	                      <span class="fa fa-whatsapp"></span>
+	                    </a>
+	                    <a href="#">
+	                      <span class="fa fa-twitter"></span>
+	                    </a>
+	                    <a href="#">
+	                      <span class="fa fa-facebook"></span>
+	                    </a>
+	                	</p>
+            			</div>
 								</div>
-							</div>
-						</a>
-					</li>
-					<li class="wow fadeInUp" style="background-image: url(images/full_2.jpg);" data-wow-duration="1s" data-wow-delay="1.7s" data-stellar-background-ratio="0.5">
-						<a href="#">
-							<div class="fh5co-overlay"></div>
-							<div class="container">
-								<div class="fh5co-text">
-									<div class="fh5co-text-inner">
-										<div class="row">
-											<div class="col-md-6"><h3>Oppressive State Apparatus</h3></div>
-											<div class="col-md-6"><p>Content for Poster 2</p></div>
-										</div>
-									</div>
+	            </div>
+	            <div class="pricing-item pricing-item--featured wow fadeInUp col-md-4" data-wow-duration="1s" data-wow-delay="1.4s">
+	            	<div class="hovereffect">
+        					<img class="img-responsive" src="http://placehold.it/350x500" alt="">
+            			<div class="overlay">
+	                	<h2>Share</h2>
+	                	<p class="icon-links">
+	                    <a href="#">
+	                      <span class="fa fa-whatsapp"></span>
+	                    </a>
+	                    <a href="#">
+	                      <span class="fa fa-twitter"></span>
+	                    </a>
+	                    <a href="#">
+	                      <span class="fa fa-facebook"></span>
+	                    </a>
+	                	</p>
+            			</div>
 								</div>
-							</div>
-						</a>
-					</li>
-					<li class="wow fadeInUp" style="background-image: url(images/full_1.jpg);" data-wow-duration="1s" data-wow-delay="2s" data-stellar-background-ratio="0.5">
-						<a href="#">
-							<div class="fh5co-overlay"></div>
-							<div class="container">
-								<div class="fh5co-text">
-									<div class="fh5co-text-inner">
-										<div class="row">
-											<div class="col-md-6"><h3>Brutal Occupation</h3></div>
-											<div class="col-md-6"><p>Content For Poster 3</p></div>
-										</div>
-									</div>
+	            </div>
+			        <div class="pricing-item wow fadeInUp col-md-4" data-wow-duration="1s" data-wow-delay="1.7s">
+			        	<div class="hovereffect">
+        					<img class="img-responsive" src="http://placehold.it/350x500" alt="">
+            			<div class="overlay">
+	                	<h2>Share</h2>
+	                	<p class="icon-links">
+	                    <a href="#">
+	                      <span class="fa fa-whatsapp"></span>
+	                    </a>
+	                    <a href="#">
+	                      <span class="fa fa-twitter"></span>
+	                    </a>
+	                    <a href="#">
+	                      <span class="fa fa-facebook"></span>
+	                    </a>
+	                	</p>
+            			</div>
 								</div>
-							</div>
-						</a>
-					</li>
-				</ul>
+			        </div>
+			      </div>
+			    </div>
+			  </div>
 			</div>
 		</div>
 
