--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".9s">
 									Since the July 8 th of 2016, the Indian state has unleashed indiscriminate force on the people of Jammu Kashmir. To crackdown on the people who were mourning the death of an armed fighter, the state has held the Kashmir region under a suffocating siege. To crush the protesters, the state has resorted to brutal violence that has left 50 civilians dead and thousands injured.
 								</p>
-								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="http://freehtml5.co/" class="btn btn-primary btn-outline btn-lg">Read about it</a></p>
+								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#history" class="btn btn-primary btn-outline btn-lg">Read about it</a></p>
 							</div>
 						</div>
 					</div>
@@ -117,7 +117,7 @@
 
 
 
-		<div class="fh5co-project-style-2">
+		<div class="fh5co-project-style-2" id="history">
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-10 col-md-offset-1 text-center">
@@ -136,13 +136,13 @@
 								Today, JKCCS, on behalf of the resilient and courageous people of Jammu and Kashmir launches - Messages from a Blind Spot - a campaign to remind the international community to the suffering caused by the aggression of the State in a region where people demand their basic right to freedom.Stand for the people of Jammu and Kashmir.
 							</p>
 						</div>
-						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#" class="btn btn-success btn-lg">Know More</a></p>
+						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#campaign" class="btn btn-success btn-lg">Know More</a></p>
 					</div>
 				</div>
 			</div>
 
 
-		<div class="fh5co-pricing-style-2">
+		<div class="fh5co-pricing-style-2" id="campaign">
 			<div class="container">
 				<div class="row">
 					<div class="row p-b">
@@ -425,36 +425,20 @@
 		<div class="fh5co-footer-style-3">
 			<div class="container">
 				<div class="row p-b">
-					<div class="col-md-3 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-						<div class="fh5co-logo"><span class="logo">V</span> Voltage</div>
-						<p class="fh5co-copyright">&copy; 2016 Voltage. <br>All Rights Reserved. <br>Designed by <a target="_blank" href="http://freehtml5.co">FREEHTML5.co</a> <br>Created with <a target="_blank" href="http://freehtml5.co/cards">Cards</a> <br>
-							Images: <a target="_blank" href="http://unsplash.com/">Unsplash</a>, <a target="_blank" href="http://pexels.com/">Pexels</a></p>
+					<div class="col-md-4 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+						<div class="fh5co-logo"><a href="www.jkccs.net"> JKCCS </a></div>
+						<p class="fh5co-copyright">&copy; 2016 JKCCS. <br>All Rights Reserved. </p>
 					</div>
-					<div class="col-md-3 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">
-						<h3>Company</h3>
-						<ul class="fh5co-links">
-							<li><a href="#">How it Works</a></li>
-							<li><a href="#">Services</a></li>
-							<li><a href="#">Products</a></li>
-							<li><a href="#">Careers</a></li>
-							<li><a href="#">Blog</a></li>
-							<li><a href="#">Contact</a></li>
-						</ul>
-					</div>
-					<div class="clearfix visible-sm-block"></div>
-					<div class="col-md-3 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s">
+					<div class="col-md-4 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s">
 						<h3>Connect</h3>
 						<ul class="fh5co-links fh5co-social">
-							<li><a href="#"><i class="icon icon-facebook2"></i> Facebook</a></li>
-							<li><a href="#"><i class="icon icon-twitter"></i> Twitter</a></li>
-							<li><a href="#"><i class="icon icon-dribbble"></i> Dribbble</a></li>
-							<li><a href="#"><i class="icon icon-instagram"></i> Instagram</a></li>
+							<li><a href="https://www.facebook.com/ccskashmir"><i class="icon icon-facebook2"></i> Facebook</a></li>
+							<li><a href="https://twitter.com/jkccs_j_and_k"><i class="icon icon-twitter"></i> Twitter</a></li>
 						</ul>
 					</div>
-					<div class="col-md-3 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.4s">
+					<div class="col-md-4 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.4s">
 						<h3>About</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-						<p><a href="#" class="btn btn-success btn-sm btn-outline">I'm a button</a></p>
+						<p> Jammu Kashmir Coalition of Civil Society (JKCCS) is an amalgam of various non-funded, non-profit, campaign, research and advocacy organizations based in Srinagar, Jammu and Kashmir.</p>
 					</div>
 					<div class="clearfix visible-sm-block"></div>
 				</div>
