--- a/index.html
+++ b/index.html
@@ -170,6 +170,12 @@
 	                    <a href="#">
 	                      <span class="fa fa-facebook"></span>
 	                    </a>
+	                    <a href="#">
+	                    	<span class="fa fa-external-link"></span>
+	                    </a>
+	                    <a href="#">
+	                    	<span class="fa fa-download"></span>
+	                    </a>
 	                	</p>
             			</div>
 								</div>
@@ -189,6 +195,12 @@
 	                    <a href="#">
 	                      <span class="fa fa-facebook"></span>
 	                    </a>
+	                    <a href="#">
+	                    	<span class="fa fa-external-link"></span>
+	                    </a>
+	                    <a href="#">
+	                    	<span class="fa fa-download"></span>
+	                    </a>
 	                	</p>
             			</div>
 								</div>
@@ -207,6 +219,12 @@
 	                    </a>
 	                    <a href="#">
 	                      <span class="fa fa-facebook"></span>
+	                    </a>
+	                    <a href="#">
+	                    	<span class="fa fa-external-link"></span>
+	                    </a>
+	                    <a href="#">
+	                    	<span class="fa fa-download"></span>
 	                    </a>
 	                	</p>
             			</div>
@@ -277,7 +295,7 @@
 			</div>
 		</div>
 
-		<div class="fh5co-counter-style-2" style="background-image: url(images/full_2.jpg);" data-stellar-background-ratio="0.5">
+		<div class="fh5co-counter-style-2" style="background-image: url(images/full_2.jpg)" data-stellar-background-ratio="0.5">
 			<div class="fh5co-overlay"></div>
 			<div class="container">
 				<div class="fh5co-section-content-wrap">
@@ -422,7 +440,7 @@
 			</div>
 		</div>
 
-		<div class="fh5co-footer-style-3">
+		<div class="fh5co-footer-style-3" style="background-image: url(images/full_3.jpg);" data-stellar-background-ratio="0.5">
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-4 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
