--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 			</div>
 		</div>
 
-		<div class="fh5co-footer-style-3" style="background-image: url(images/full_3.jpg);" data-stellar-background-ratio="0.5">
+		<div class="fh5co-footer-style-3">
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-4 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
