--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 						<div class="row">
 							<div class="col-md-4 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
 								<div class="icon">
-									<i class="icon-command"></i>
+									<i class="fa fa-clock-o" aria-hidden="true"></i>
 								</div>
 								<span class="fh5co-counter js-counter" data-from="0" data-to="18" data-speed="5000" data-refresh-interval="50"></span>
 								<span class="fh5co-counter-label">Days</span>
@@ -311,14 +311,14 @@
 							</div>
 							<div class="col-md-4 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">
 								<div class="icon">
-									<i class="icon-power"></i>
+									<i class="fa fa-heartbeat" aria-hidden="true"></i>
 								</div>
 								<span class="fh5co-counter js-counter" data-from="0" data-to="50" data-speed="5000" data-refresh-interval="50"></span>
 								<span class="fh5co-counter-label">Deaths</span>
 							</div>
 							<div class="col-md-4 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s">
 								<div class="icon">
-									<i class="icon-code2"></i>
+									<i class="fa fa-ambulance" aria-hidden="true""></i>
 								</div>
 								<span class="fh5co-counter js-counter" data-from="0" data-to="1000" data-speed="5000" data-refresh-interval="50"></span>
 								<span class="fh5co-counter-label">Injured</span>
