--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 				</div>
 				<div class="col-lg-6 col-md-5 col-sm-5 text-center fh5co-link-wrap">
 					<ul data-offcanvass="yes">
-						<li class="active"><a href="#">About</a></li>
-						<li><a href="#">Explore</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Pricing</a></li>
+						<li class="active"><a href="http://jkccs.net" target="_blank">Home</a></li>
+						<li><a href="#campaign">Campaign</a></li>
+						<li><a href="#victims">Victims</a></li>
+						<li><a href="#about">About</a></li>
 					</ul>
 				</div>
 			</div>
@@ -329,7 +329,7 @@
 			</div>
 		</div>
 
-		<div class="fh5co-testimonial-style-2">
+		<div class="fh5co-testimonial-style-2" id="victims">
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-6 col-md-offset-3 text-center">
@@ -390,24 +390,33 @@
 			</div>
 		</div>
 
-		<div class="fh5co-footer-style-3">
+		<div class="fh5co-footer-style-3" id="about">
 			<div class="container">
 				<div class="row p-b">
-					<div class="col-md-4 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+					<div class="col-md-3 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
 						<div class="fh5co-logo"><a href="www.jkccs.net"> JKCCS </a></div>
-						<p class="fh5co-copyright">&copy; 2016 JKCCS. <br>All Rights Reserved. </p>
+						<span>Jammu Kashmir Coalition of Civil Society (JKCCS) is an amalgam of various non-funded, non-profit, campaign, research and advocacy organizations based in Srinagar, Jammu and Kashmir.</span>
 					</div>
-					<div class="col-md-4 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s">
+					<div class="col-md-3 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s">
 						<h3>Connect</h3>
 						<ul class="fh5co-links fh5co-social">
-							<li><a href="https://www.facebook.com/ccskashmir"><i class="icon icon-facebook2"></i> Facebook</a></li>
-							<li><a href="https://twitter.com/jkccs_j_and_k"><i class="icon icon-twitter"></i> Twitter</a></li>
+							<li><a href="https://www.facebook.com/ccskashmir" target="_blank"><i class="icon icon-facebook2"></i> Facebook</a></li>
+							<li><a href="https://twitter.com/jkccs_j_and_k" target="_blank"><i class="icon icon-twitter"></i> Twitter</a></li>
 						</ul>
 					</div>
-					<div class="col-md-4 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.4s">
-						<h3>About</h3>
-						<p> Jammu Kashmir Coalition of Civil Society (JKCCS) is an amalgam of various non-funded, non-profit, campaign, research and advocacy organizations based in Srinagar, Jammu and Kashmir.</p>
+
+					<div class="col-md-3 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+						<div class="fh5co-logo"><a href="www.jkccs.net"> Blacksheep Works </a></div>
+						<span>Kashmir's exclusive Creative Communications Agency here to help its clients win love and respect of their customers. We do it the lateral way.</span>
 					</div>
+					<div class="col-md-3 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s">
+						<h3>Connect</h3>
+						<ul class="fh5co-links fh5co-social">
+							<li><a href="https://www.facebook.com/blacksheepworks" target="_blank"><i class="icon icon-facebook2"></i> Facebook</a></li>
+							<li><a href="https://twitter.com/dotBLACKSHEEP" target="_blank"><i class="icon icon-twitter"></i> Twitter</a></li>
+						</ul>
+					</div>
+
 					<div class="clearfix visible-sm-block"></div>
 				</div>
 			</div>
