--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 						<div class="pricing">
 	            <div class="pricing-item wow fadeInUp col-md-4" data-wow-duration="1s" data-wow-delay="1.1s">
     						<div class="hovereffect">
-        					<img class="img-responsive" src="http://placehold.it/350x500" alt="">
+        					<img class="img-responsive" src="images/Ad_1_Web.jpg" alt="">
             			<div class="overlay">
 	                	<h2>Share</h2>
 	                	<p class="icon-links">
@@ -170,10 +170,10 @@
 	                    <a href="#">
 	                      <span class="fa fa-facebook"></span>
 	                    </a>
-	                    <a href="#">
+	                    <a href="images/MagAd_campaign-1.pdf" target="_blank">
 	                    	<span class="fa fa-external-link"></span>
 	                    </a>
-	                    <a href="#">
+	                    <a href="images/Campaign1.zip" target="_blank">
 	                    	<span class="fa fa-download"></span>
 	                    </a>
 	                	</p>
@@ -182,7 +182,7 @@
 	            </div>
 	            <div class="pricing-item pricing-item--featured wow fadeInUp col-md-4" data-wow-duration="1s" data-wow-delay="1.4s">
 	            	<div class="hovereffect">
-        					<img class="img-responsive" src="http://placehold.it/350x500" alt="">
+        					<img class="img-responsive" src="images/Ad_2_Web.jpg" alt="">
             			<div class="overlay">
 	                	<h2>Share</h2>
 	                	<p class="icon-links">
@@ -195,10 +195,10 @@
 	                    <a href="#">
 	                      <span class="fa fa-facebook"></span>
 	                    </a>
-	                    <a href="#">
+	                    <a href="images/MagAd_campaign-3.pdf" target="_blank">
 	                    	<span class="fa fa-external-link"></span>
 	                    </a>
-	                    <a href="#">
+	                    <a href="images/Campaign2.zip" target="_blank">
 	                    	<span class="fa fa-download"></span>
 	                    </a>
 	                	</p>
@@ -207,7 +207,7 @@
 	            </div>
 			        <div class="pricing-item wow fadeInUp col-md-4" data-wow-duration="1s" data-wow-delay="1.7s">
 			        	<div class="hovereffect">
-        					<img class="img-responsive" src="http://placehold.it/350x500" alt="">
+        					<img class="img-responsive" src="images/Ad_3_Web.jpg" alt="">
             			<div class="overlay">
 	                	<h2>Share</h2>
 	                	<p class="icon-links">
@@ -220,10 +220,10 @@
 	                    <a href="#">
 	                      <span class="fa fa-facebook"></span>
 	                    </a>
-	                    <a href="#">
+	                    <a href="images/MagAd_campaign-3.pdf" target="_blank">
 	                    	<span class="fa fa-external-link"></span>
 	                    </a>
-	                    <a href="#">
+	                    <a href="images/Campaign3.zip" target="_blank">
 	                    	<span class="fa fa-download"></span>
 	                    </a>
 	                	</p>
