--- a/index.html
+++ b/index.html
@@ -79,10 +79,13 @@
 				</div>
 				<div class="col-lg-6 col-md-5 col-sm-5 text-center fh5co-link-wrap">
 					<ul data-offcanvass="yes">
-						<li class="active"><a href="http://jkccs.net" target="_blank">Home</a></li>
+						<li class="active"><a href="http://jkccs.net" target="_blank">Crisis</a></li>
 						<li><a href="#campaign">Campaign</a></li>
-						<li><a href="#victims">Victims</a></li>
-						<li><a href="#about">About</a></li>
+						<li><a href="#victims">Casualties</a></li>
+						<li><a href="#counter">Counter</a></li>
+						<li><a href="#coverage">Coverage</a></li>
+						<li><a href="#concern">Concern</a></li>
+						<li><a href="#about">Credits</a></li>
 					</ul>
 				</div>
 			</div>
@@ -102,9 +105,9 @@
 						<div class="col-md-push-6 col-md-6 full-height js-full-height">
 							<div class="fh5co-cover-intro">
 								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Messages from a Blind Spot</h1>
-								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">18 days, an estimated 50 civilians dead, and thousands injured.</h2>
+								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">A passionate plea to open eyes and hearts to Kashmir’s pain.</h2>
 								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".9s">
-									Since the July 8 th of 2016, the Indian state has unleashed indiscriminate force on the people of Jammu Kashmir. To crackdown on the people who were mourning the death of an armed fighter, the state has held the Kashmir region under a suffocating siege. To crush the protesters, the state has resorted to brutal violence that has left 50 civilians dead and thousands injured.
+									The Indian state has unleashed yet another spell of indiscriminate force on the people of Kashmir, who were mourning the death of a rebel fighter killed in cold bold on 8th of July, 2016. To crush the protesters, the state forces have resorted to brutal violence that has left 50 civilians dead, hundreds blinded with pellet shotguns and thousands grievously injured with live bullet wounds. The beleaguered vale of Kashmir is reeling under a suffocating siege and a total clampdown on any form of communication with the outside world. This Cre-de-Coeur is a passionate attempt at turning the attention of the world community toward the blind-spot Kashmir has turned into over the years.
 								</p>
 								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#history" class="btn btn-primary btn-outline btn-lg">Read about it</a></p>
 							</div>
@@ -121,19 +124,23 @@
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-10 col-md-offset-1 text-center">
-						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Where it began</h2>
+						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Kashmir in Context of Current Crisis</h2>
 						<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">
 							<p>
-								Among the thousands of casualties lies a horrific usage of pellet shotguns. In the name of non lethal weapons, the state’s indiscriminate use of pellet shot guns has resulted in an estimated 70 civilians being partially or totally blinded. The pellet shotguns have been first put to use in 2010, have been banned internationally by various organisations and governments. They are incapable of distinction or proportionality of force during ‘crowd control’ situations. Jammu Kashmir is reeling under a state agression that aims to control the population, crackdown on collective protests, restrict all civilian rights and break the will of the people who demand freedom and self determination.
+								Jammu and Kashmir is under a brutal state aggression that aims to control the population, crackdown on collective protests, restrict all civilian rights and break the will of the people who demand the occupation to uphold its right to self-determination.
 							</p>
 							<p>
-								The present violence is a continuation of state agression since decades, whereby people’s demand for right of self determination has been curbed under a brutal crackdown. Thus far, militarily occupied Jammu Kashmir with over 700,000 Indian armed forces personnel have been complicit of killing 70, 000 people, over 8000 enforced disappearances and countless cases of torture and sexual violence.
-							</p>
-							<p>
-								In this occupied territory, the Indian state has given legal impunity to its armed forces as to exonerate potential war crimes. The Indian state not only stands in violation of its own laws but international laws and in particular the Geneva conventions.
-							</p>
-							<p>
-								Today, JKCCS, on behalf of the resilient and courageous people of Jammu and Kashmir launches - Messages from a Blind Spot - a campaign to remind the international community to the suffering caused by the aggression of the State in a region where people demand their basic right to freedom.Stand for the people of Jammu and Kashmir.
+The present violence is continuation of this state repression since decades, whereby people’s human rights have been grossly violated through systematic oppressive tactics by the state apparatus.
+</p>
+<p>
+Thus far, militarily occupied Jammu Kashmir with over 700,000 Indian armed forces personnel have been complicit of killing 70, 000 people, over 8000 enforced disappearances and countless cases of torture and sexual violence.
+In this occupied territory, the Indian state has given legal impunity to its armed forces as to exonerate potential war crimes. The Indian state not only stands in violation of its own laws but international laws and in particular the Geneva Conventions.
+</p>
+<p>
+Jammu Kashmir Coalition of Civil Society (JKCCS), on behalf of the resilient people of Jammu and Kashmir launches - Messages from a Blind Spot - a compassionate campaign to remind the international community of the sufferings caused by the aggression of the State in a region where people’s rightful demand to self-determination is trampled under the jackboots with brute force.
+</p>
+<p>
+Please go through the various sections and familiarize yourself with the crisis. Even a small contribution from you can make a big difference towards upholding human rights in Kashmir. We thank you for showing compassion and appreciate your time and concern.
 							</p>
 						</div>
 						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#campaign" class="btn btn-success btn-lg">Know More</a></p>
@@ -236,12 +243,12 @@
 			</div>
 		</div>
 
-		<div class="fh5co-blog-style-1">
+		<div class="fh5co-blog-style-1" id="#coverage">
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-6 col-md-offset-3 text-center">
-						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">From Newspapers</h2>
-						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">What is the nature of violence in Jammu and Kashmir today? What is the wider context to the present violence? </p>
+						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Covergage</h2>
+						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">A choice of news stories the world and local media has covered about the resent cycle of violence unleashed by the state </p>
 					</div>
 				</div>
 				<div class="row p-b">
@@ -295,7 +302,7 @@
 			</div>
 		</div>
 
-		<div class="fh5co-counter-style-2" style="background-image: url(images/full_2.jpg)" data-stellar-background-ratio="0.5">
+		<div class="fh5co-counter-style-2" style="background-image: url(images/full_2.jpg)" data-stellar-background-ratio="0.5" id="#counter">
 			<div class="fh5co-overlay"></div>
 			<div class="container">
 				<div class="fh5co-section-content-wrap">
@@ -333,7 +340,7 @@
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-6 col-md-offset-3 text-center">
-						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">The ones sufferred</h2>
+						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Causalities</h2>
 						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s"> </p>
 					</div>
 				</div>
