--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<![endif]-->
 
 	</head>
-	<body>
+	<body style="text-align: left;">
 
 	<div id="fh5co-page">
 		<nav class="fh5co-nav-style-1" role="navigation" data-offcanvass-position="fh5co-offcanvass-left">
@@ -77,14 +77,13 @@
 					<a href="#" class="js-fh5co-mobile-toggle fh5co-nav-toggle"><i></i></a>
 					<a href="#"><img src="images/logo.png" style="position: absolute; width: 100px; top: -24px; left: 75px;"></a>
 				</div>
-				<div class="col-lg-6 col-md-5 col-sm-5 text-center fh5co-link-wrap">
+				<div class="col-md-8 text-center fh5co-link-wrap">
 					<ul data-offcanvass="yes">
-						<li class="active"><a href="http://jkccs.net" target="_blank">Crisis</a></li>
+						<li><a href="http://jkccs.net" target="_blank">Crisis</a></li>
 						<li><a href="#campaign">Campaign</a></li>
 						<li><a href="#victims">Casualties</a></li>
 						<li><a href="#counter">Counter</a></li>
 						<li><a href="#coverage">Coverage</a></li>
-						<li><a href="#concern">Concern</a></li>
 						<li><a href="#about">Credits</a></li>
 					</ul>
 				</div>
@@ -107,7 +106,12 @@
 								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Messages from a Blind Spot</h1>
 								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">A passionate plea to open eyes and hearts to Kashmir’s pain.</h2>
 								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".9s">
-									The Indian state has unleashed yet another spell of indiscriminate force on the people of Kashmir, who were mourning the death of a rebel fighter killed in cold bold on 8th of July, 2016. To crush the protesters, the state forces have resorted to brutal violence that has left 50 civilians dead, hundreds blinded with pellet shotguns and thousands grievously injured with live bullet wounds. The beleaguered vale of Kashmir is reeling under a suffocating siege and a total clampdown on any form of communication with the outside world. This Cre-de-Coeur is a passionate attempt at turning the attention of the world community toward the blind-spot Kashmir has turned into over the years.
+								<p>
+									The Indian state has unleashed yet another spell of indiscriminate force on the people of Kashmir, who were mourning the death of a rebel fighter killed in cold bold on 8th of July, 2016. To crush the protesters, the state forces have resorted to brutal violence that has left 50 civilians dead, hundreds blinded with pellet shotguns and thousands grievously injured with live bullet wounds.
+								</p>
+								<p>
+									 The beleaguered vale of Kashmir is reeling under a suffocating siege and a total clampdown on any form of communication with the outside world. This Cre-de-Coeur is a passionate attempt at turning the attention of the world community toward the blind-spot Kashmir has turned into over the years.
+								</p>
 								</p>
 								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#history" class="btn btn-primary btn-outline btn-lg">Read about it</a></p>
 							</div>
@@ -125,7 +129,7 @@
 				<div class="row p-b">
 					<div class="col-md-10 col-md-offset-1 text-center">
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Kashmir in Context of Current Crisis</h2>
-						<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">
+						<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="text-align:left;">
 							<p>
 								Jammu and Kashmir is under a brutal state aggression that aims to control the population, crackdown on collective protests, restrict all civilian rights and break the will of the people who demand the occupation to uphold its right to self-determination.
 							</p>
