--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				</div>
 				<div class="col-md-8 text-center fh5co-link-wrap">
 					<ul data-offcanvass="yes">
-						<li><a href="http://jkccs.net" target="_blank">Crisis</a></li>
+						<li><a href="#crisis" target="_blank">Crisis</a></li>
 						<li><a href="#campaign">Campaign</a></li>
 						<li><a href="#victims">Casualties</a></li>
 						<li><a href="#counter">Counter</a></li>
@@ -113,7 +113,6 @@
 									 The beleaguered vale of Kashmir is reeling under a suffocating siege and a total clampdown on any form of communication with the outside world. This Cre-de-Coeur is a passionate attempt at turning the attention of the world community toward the blind-spot Kashmir has turned into over the years.
 								</p>
 								</p>
-								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#history" class="btn btn-primary btn-outline btn-lg">Read about it</a></p>
 							</div>
 						</div>
 					</div>
@@ -124,7 +123,7 @@
 
 
 
-		<div class="fh5co-project-style-2" id="history">
+		<div class="fh5co-project-style-2" id="crisis">
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-10 col-md-offset-1 text-center">
@@ -134,17 +133,17 @@
 								Jammu and Kashmir is under a brutal state aggression that aims to control the population, crackdown on collective protests, restrict all civilian rights and break the will of the people who demand the occupation to uphold its right to self-determination.
 							</p>
 							<p>
-The present violence is continuation of this state repression since decades, whereby people’s human rights have been grossly violated through systematic oppressive tactics by the state apparatus.
-</p>
-<p>
-Thus far, militarily occupied Jammu Kashmir with over 700,000 Indian armed forces personnel have been complicit of killing 70, 000 people, over 8000 enforced disappearances and countless cases of torture and sexual violence.
-In this occupied territory, the Indian state has given legal impunity to its armed forces as to exonerate potential war crimes. The Indian state not only stands in violation of its own laws but international laws and in particular the Geneva Conventions.
-</p>
-<p>
-Jammu Kashmir Coalition of Civil Society (JKCCS), on behalf of the resilient people of Jammu and Kashmir launches - Messages from a Blind Spot - a compassionate campaign to remind the international community of the sufferings caused by the aggression of the State in a region where people’s rightful demand to self-determination is trampled under the jackboots with brute force.
-</p>
-<p>
-Please go through the various sections and familiarize yourself with the crisis. Even a small contribution from you can make a big difference towards upholding human rights in Kashmir. We thank you for showing compassion and appreciate your time and concern.
+								The present violence is continuation of this state repression since decades, whereby people’s human rights have been grossly violated through systematic oppressive tactics by the state apparatus.
+							</p>
+							<p>
+								Thus far, militarily occupied Jammu Kashmir with over 700,000 Indian armed forces personnel have been complicit of killing 70, 000 people, over 8000 enforced disappearances and countless cases of torture and sexual violence.
+								In this occupied territory, the Indian state has given legal impunity to its armed forces as to exonerate potential war crimes. The Indian state not only stands in violation of its own laws but international laws and in particular the Geneva Conventions.
+							</p>
+							<p>
+								Jammu Kashmir Coalition of Civil Society (JKCCS), on behalf of the resilient people of Jammu and Kashmir launches - Messages from a Blind Spot - a compassionate campaign to remind the international community of the sufferings caused by the aggression of the State in a region where people’s rightful demand to self-determination is trampled under the jackboots with brute force.
+							</p>
+							<p>
+								Please go through the various sections and familiarize yourself with the crisis. Even a small contribution from you can make a big difference towards upholding human rights in Kashmir. We thank you for showing compassion and appreciate your time and concern.
 							</p>
 						</div>
 						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#campaign" class="btn btn-success btn-lg">Know More</a></p>
@@ -343,9 +342,9 @@ Please go through the various sections and familiarize yourself with the crisis.
 		<div class="fh5co-testimonial-style-2" id="victims">
 			<div class="container">
 				<div class="row p-b">
-					<div class="col-md-6 col-md-offset-3 text-center">
-						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Causalities</h2>
-						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s"> </p>
+					<div class="col-md-10 col-md-offset-1 text-center">
+						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Casualities</h2>
+						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="text-align: left;">During the current onslaught of violence by the state, the indiscriminate use of pellet shotguns by its forces has resulted in an estimated 70 civilians being partially or totally blinded. These 12-guage, pump-action shotguns first put to use during the 2010 uprising, have been banned by various international organizations and governments as these were found incapable of distinction or proportionality of force during ‘crowd control’ situations. This is a deliberate attempt at striking fear in the hearts of the population by maiming and blinding the unarmed protesters which include kids as young as 5 year olds and elderly as  old as 80-year-old. </p>
 					</div>
 				</div>
 				<div class="row">
@@ -405,6 +404,7 @@ Please go through the various sections and familiarize yourself with the crisis.
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-3 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+						<div> <a href="http://www.jkcss.net"><img src="images/logo.png" style="width: 65px; padding-bottom: 30px;"></div>
 						<div class="fh5co-logo"><a href="www.jkccs.net"> JKCCS </a></div>
 						<span>Jammu Kashmir Coalition of Civil Society (JKCCS) is an amalgam of various non-funded, non-profit, campaign, research and advocacy organizations based in Srinagar, Jammu and Kashmir.</span>
 					</div>
@@ -417,8 +417,9 @@ Please go through the various sections and familiarize yourself with the crisis.
 					</div>
 
 					<div class="col-md-3 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-						<div class="fh5co-logo"><a href="www.jkccs.net"> Blacksheep Works </a></div>
-						<span>Kashmir's exclusive Creative Communications Agency here to help its clients win love and respect of their customers. We do it the lateral way.</span>
+						<div> <a href="http://www.blacksheep.works"><img src="images/logo2.png" style="width: 100px; padding-bottom: 30px;"></div>
+						<div class="fh5co-logo"><a href="http://www.blacksheep.works"> Blacksheep Works </a></div>
+						<span>BlackSheep.Works is Kashmir’s exclusive Creative Communications Agency, run by internationally acclaimed creative professionals, based in Srinagar, Jammu and Kashmir.</span>
 					</div>
 					<div class="col-md-3 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s">
 						<h3>Connect</h3>
