--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-6 col-md-offset-3 text-center">
-						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Covergage</h2>
+						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Coverage</h2>
 						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">A choice of news stories the world and local media has covered about the resent cycle of violence unleashed by the state </p>
 					</div>
 				</div>
@@ -344,7 +344,7 @@
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-10 col-md-offset-1 text-center">
-						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Casualities</h2>
+						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Casualties</h2>
 						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="text-align: left;">During the current onslaught of violence by the state, the indiscriminate use of pellet shotguns by its forces has resulted in an estimated 70 civilians being partially or totally blinded. These 12-guage, pump-action shotguns first put to use during the 2010 uprising, have been banned by various international organizations and governments as these were found incapable of distinction or proportionality of force during ‘crowd control’ situations. This is a deliberate attempt at striking fear in the hearts of the population by maiming and blinding the unarmed protesters which include kids as young as 5 year olds and elderly as  old as 80-year-old. </p>
 					</div>
 				</div>
