--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 			</div>
 		</div>
 
-		<div class="fh5co-blog-style-1" id="#coverage">
+		<div class="fh5co-blog-style-1" id="coverage">
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-6 col-md-offset-3 text-center">
