--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
 	-->
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<meta property="og:title" content="Kashmir BlindSpot Campaign"/>
+	<meta property="og:image" content="images/Ad_1_Web.jpg"/>
+	<meta property="og:image" content="images/Ad_2_Web.jpg"/>
+	<meta property="og:image" content="images/Ad_3_Web.jpg"/>
+	<meta property="og:url" content="http://kashmirblindspot.jkccs.net"/>
+	<meta property="og:site_name" content="JKCCS"/>
+	<meta property="og:description" content="A passionate plea to open eyes and hearts to Kashmir’s pain."/>
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
