--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 									 The beleaguered vale of Kashmir is reeling under a suffocating siege and a total clampdown on any form of communication with the outside world. This Cre-de-Coeur is a passionate attempt at turning the attention of the world community toward the blind-spot Kashmir has turned into over the years.
 								</p>
 								</p>
-								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="" class="btn btn-primary btn-outline btn-lg">Show your support.</a></p>
+								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="" class="btn btn-primary btn-outline btn-lg">Show your support</a></p>
 							</div>
 						</div>
 					</div>
