--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 									The Indian state has unleashed yet another spell of indiscriminate force on the people of Kashmir, who were mourning the death of a rebel fighter killed in cold bold on 8th of July, 2016. To crush the protesters, the state forces have resorted to brutal violence that has left 50 civilians dead, hundreds blinded with pellet shotguns and thousands grievously injured with live bullet wounds.
 								</p>
 								<p>
-									 The beleaguered vale of Kashmir is reeling under a suffocating siege and a total clampdown on any form of communication with the outside world. This Cre-de-Coeur is a passionate attempt at turning the attention of the world community toward the blind-spot Kashmir has turned into over the years.
+									 The beleaguered vale of Kashmir is reeling under a suffocating siege and a total clampdown on any form of communication with the outside world. This Cre-de-Coeur is a passionate attempt at drawing the attention of the world community toward the blind-spot Kashmir has turned into over the years.
 								</p>
 								</p>
 								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="" class="btn btn-primary btn-outline btn-lg">Show your support</a></p>
