--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 			</div>
 		</div>
 
-		<div class="fh5co-blog-style-1" id="coverage" style="background: #D9BB26;">
+		<div class="fh5co-blog-style-1" id="coverage" style="background: #b7cc80;">
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-6 col-md-offset-3 text-center">
