--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
 					<div class="row p-b">
 						<div class="col-md-6 col-md-offset-3 text-center">
 							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Campaign</h2>
-							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s"> </p>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s">
+							Make the whole world know about the illegal use of pellet guns being indiscriminately used by the Indian forces on unarmed civilians in Kashmir. Please highlight the scourge of the state violence by writing to the Office of the Commissioner Human Rights Council and sharing the campaign widely on social media. We thank you for showing compassion and appreciate your time and concern. </p>
 						</div>
 					</div>
 				</div>
