--- a/index.html
+++ b/index.html
@@ -258,24 +258,24 @@
 
 							<div class="col-md-4 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
 								<div class="icon">
-									<i class="fa fa-clock-o" aria-hidden="true"></i>
-								</div>
-								<span class="fh5co-counter js-counter" data-from="0" data-to="18" data-speed="5000" data-refresh-interval="50"></span>
-								<span class="fh5co-counter-label">Days</span>
-
-							</div>
-							<div class="col-md-4 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">
-								<div class="icon">
 									<i class="fa fa-heartbeat" aria-hidden="true"></i>
 								</div>
 								<span class="fh5co-counter js-counter" data-from="0" data-to="50" data-speed="5000" data-refresh-interval="50"></span>
 								<span class="fh5co-counter-label">Deaths</span>
+
+							</div>
+							<div class="col-md-4 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">
+								<div class="icon">
+									<i class="fa fa-eye" aria-hidden="true"></i>
+								</div>
+								<span class="fh5co-counter js-counter" data-from="0" data-to="115" data-speed="5000" data-refresh-interval="50"></span>
+								<span class="fh5co-counter-label">Eye Damage</span>
 							</div>
 							<div class="col-md-4 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s">
 								<div class="icon">
 									<i class="fa fa-ambulance" aria-hidden="true""></i>
 								</div>
-								<span class="fh5co-counter js-counter" data-from="0" data-to="1000" data-speed="5000" data-refresh-interval="50"></span>
+								<span class="fh5co-counter js-counter" data-from="0" data-to="3000" data-speed="5000" data-refresh-interval="50"></span>
 								<span class="fh5co-counter-label">Injured</span>
 							</div>
 						</div>
