--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 								Jammu Kashmir Coalition of Civil Society (JKCCS), on behalf of the resilient people of Jammu and Kashmir launches - Messages from a Blind Spot - a compassionate campaign to remind the international community of the sufferings caused by the aggression of the State in a region where people’s rightful demand to self-determination is trampled under the jackboots with brute force.
 							</p>
 							<p>
-								Please go through the various sections and familiarize yourself with the crisis. Even a small contribution from you can make a big difference towards upholding human rights in Kashmir. We thank you for showing compassion and appreciate your time and concern.
+								Please go through the various sections and familiarize yourself with the crisis. Even a small contribution from you can make a big difference towards upholding human rights in Kashmir.
 							</p>
 						</div>
 					</div>
