--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 				<div class="row">
 					<div class="row p-b">
 						<div class="col-md-8 col-md-offset-2 text-center">
-							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Campaign</h2>
+							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="color:#000;">Kashmir Blind Spot Campaign</h2>
 							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s" style="text-align:left; color:#fff;">
 							Make the whole world know about the illegal use of pellet guns being indiscriminately used by the Indian forces on unarmed civilians in Kashmir.
 							<br>
