--- a/index.html
+++ b/index.html
@@ -106,11 +106,14 @@
 							<div class="fh5co-cover-intro">
 								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Messages from a Blind Spot</h1>
 								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">A passionate plea to open eyes and hearts to Kashmir’s pain.</h2>
-								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".9s" style="color:#fff;">
-									The Indian state has unleashed yet another spell of indiscriminate force on the people of Kashmir, who were mourning the death of a rebel fighter killed in cold bold on 8th of July, 2016. To crush the protesters, the state forces have resorted to brutal violence that has left 50 civilians dead, hundreds blinded with pellet shotguns and thousands grievously injured with live bullet wounds.
-								<br>
+								<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".9s" style="color:#fff;">
+									<p>
+										The Indian state has unleashed yet another spell of indiscriminate force on the people of Kashmir, who were mourning the death of a rebel fighter killed in cold bold on 8th of July, 2016. To crush the protesters, the state forces have resorted to brutal violence that has left 50 civilians dead, hundreds blinded with pellet shotguns and thousands grievously injured with live bullet wounds.
+									</p>
+									<p>
 									 The beleaguered vale of Kashmir is reeling under a suffocating siege and a total clampdown on any form of communication with the outside world. This Cre-de-Coeur is a passionate attempt at drawing the attention of the world community toward the blind-spot Kashmir has turned into over the years.
-								</p>
+									</p>
+								</div>
 								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#campaign" class="btn btn-primary btn-outline btn-lg">Show your support</a></p>
 							</div>
 						</div>
@@ -152,14 +155,15 @@
 
 		<div class="fh5co-pricing-style-2" id="campaign">
 			<div class="container">
-				<div class="row">
-					<div class="row p-b">
-						<div class="col-md-8 col-md-offset-2 text-center">
-							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="color:#000;">Kashmir Blind Spot Campaign</h2>
-							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s" style="text-align:left; color:#fff;">
-							Make the whole world know about the illegal use of pellet guns being indiscriminately used by the Indian forces on unarmed civilians in Kashmir.
-							<br>
-							Please highlight the scourge of the state violence by writing to the Office of the Commissioner Human Rights Council and sharing the campaign widely on social media. We thank you for showing compassion and appreciate your time and concern. </p>
+				<div class="row p-b">
+					<div class="col-md-10 col-md-offset-1 text-center">
+						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="color:#000;">Kashmir Blind Spot Campaign</h2>
+						<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s" style="text-align:left; color:#000;">
+						<p style="color:#000">
+						Make the whole world know about the illegal use of pellet guns being indiscriminately used by the Indian forces on unarmed civilians in Kashmir.
+						</p>
+						<p style="color:#000">
+						Please highlight the scourge of the state violence by writing to the Office of the Commissioner Human Rights Council and sharing the campaign widely on social media. We thank you for showing compassion and appreciate your time and concern. </p>
 						</div>
 					</div>
 				</div>
