--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 							<div class="fh5co-cover-intro">
 								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Messages from a Blind Spot</h1>
 								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">A passionate plea to open eyes and hearts to Kashmir’s pain.</h2>
-								<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".9s" style="color:#fff;">
+								<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".9s" style="color:#dedede;">
 									<p>
 										The Indian state has unleashed yet another spell of indiscriminate force on the people of Kashmir, who were mourning the death of a rebel fighter killed in cold bold on 8th of July, 2016. To crush the protesters, the state forces have resorted to brutal violence that has left 50 civilians dead, hundreds blinded with pellet shotguns and thousands grievously injured with live bullet wounds.
 									</p>
